fix: content shift on modal open

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,7 +8,7 @@ body {
 
 .no-scroll {
     height: 100hv;
-    padding-right: 15px;
+    padding-right: 17px;
     overflow: hidden;
 }
 
